# Slicer-PET-MUST-segmenter

./: CMakeLists.txt  README.md
MUSTsegmenter/: CMakeLists.txt  MUSTsegmenter.py
MUSTsegmenter/Resources/UI/: MUSTsegmenter.ui
Sample Data/: README.MD
screenshots/: Thumbs.db
